--- a/templates/404.html
+++ b/templates/404.html
@@ -16,14 +16,12 @@
             <img src="{{ url_for('static',filename='imags/page-not-found.png') }}" alt="page not found"/>
         </div>
 
-        <h3>  Sorry, an error has occured, Requested page not found!</h3>
+        <h3>Sorry, an error has occured, Requested page not found!</h3>
 
         <div class="error-actions">
-            <a href="/" class="btn btn-primary btn-lg"><span
-                    class="glyphicon glyphicon-home"></span>
-                Take Me Home </a>
-            <a href="/contact" class="btn btn-default btn-lg"><span
-                class="glyphicon glyphicon-envelope"></span> Contact Support </a>
+
+            <a href="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>Take Me Home </a>
+            <a href="/contact" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
         </div>
     </div>
 {% endblock %}
