--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
 
 
 
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}"/>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
@@ -28,7 +28,6 @@
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -38,31 +37,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('home_page') }}">Brand</a>
+            <a class="navbar-brand" href="{{ url_for('home_page') }}"><img src="{{ url_for('static',filename='imags/logo.png') }}" class="img-responsive" width="200" alt=""/></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/price">Prices<span class="sr-only">(current)</span></a></li>
                 <li><a href="{{ url_for('review_page') }}">Review</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ url_for('contact_page') }}">Contact</a></li>
                 <li><a href="{{ url_for('about_page') }}">About</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
-    </div>
     <!-- /.container-fluid -->
 </nav>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-10 col-lg-offset-1">
-            {% block body %}{% endblock %}
-        </div>
-    </div>
-</div>
+
+{% block body %}{% endblock %}
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, est, nemo. Ab atque commodi consequatur culpa doloribus eos, facilis ipsum magnam numquam officia quam quisquam rem repudiandae, sit, veritatis. Molestias.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ducimus enim eum exercitationem inventore iste itaque laborum laudantium magni minima natus neque optio perspiciatis porro, ratione, rem repellat sit suscipit.</p>
+
 <footer class="footer ">
     <div class="container">
 
