--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,21 @@
 .footer{
-    background-color: darkblue;
+    background-color: #bdc3c7;
     width: 100%;
-    height: 160px;
+    min-height: 100px;
     bottom:0px;
-    left:0px;
 }
 
 .err-image{
     width: 100%;
 }
+
+.error-template {
+    padding: 40px 15px;
+    text-align: center;
+}
+}
+.error-actions {margin-top:15px;margin-bottom:15px;}
+.error-actions .btn { margin-right:10px; }
 
 
 .navbar {
@@ -49,4 +56,29 @@
       font-weight: 600;
       font-family: Arial, Helvetica, sans-serif;
   }
+}
+
+.copy-right-note {
+    padding: 20px;
+    margin-top: 10px;
+}
+
+.footer-menu-list{
+    font-size: 1.2em;
+    line-height: 20px;
+}
+
+.footer-menu-list li {
+    list-style-type: none;
+    padding:10px 0;
+}
+
+.footer-menu-list li a:hover {
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer-menu-list a:active, a:link, a:visited {
+    text-decoration: none;
+    color: indianred;
 }
