--- a/templates/404.html
+++ b/templates/404.html
@@ -1,25 +1,13 @@
 {% extends "base.html" %}
 
-{% block head %}
-<style type="text/css">
-.error-template {padding: 40px 15px;text-align: center;}
-.error-actions {margin-top:15px;margin-bottom:15px;}
-.error-actions .btn { margin-right:10px; }
-</style>
-{% endblock %}
-
 {% block body %}
     <div class="error-template">
         <h1>Oops! 404 Not Found</h1>
-
-        <div class="img-responsive">
-            <img src="{{ url_for('static',filename='imags/page-not-found.png') }}" alt="page not found"/>
-        </div>
         <h3>Sorry, an error has occured, Requested page not found!</h3>
         <div class="error-actions">
 
-            <a href="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>Take Me Home </a>
-            <a href="/contact" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
+            <a href="{{ url_for('home_page') }}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>Take Me Home </a>
+            <a href="{{ url_for('contact_page') }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
         </div>
     </div>
 {% endblock %}
