--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
 
 
     <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}"/>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
@@ -58,9 +59,50 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, est, nemo. Ab atque commodi consequatur culpa doloribus eos, facilis ipsum magnam numquam officia quam quisquam rem repudiandae, sit, veritatis. Molestias.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ducimus enim eum exercitationem inventore iste itaque laborum laudantium magni minima natus neque optio perspiciatis porro, ratione, rem repellat sit suscipit.</p>
 
-<footer class="footer ">
-    <div class="container">
-
+<footer class="footer">
+    <div class="container-fluid">
+        <div class="row ">
+            <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <ul class="footer-menu-list">
+                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                        <li><a href="#"><i class="icon-book"></i> Library</a></li>
+                        <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
+                        <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <ul class="nav nav-list">
+                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                        <li><a href="#"><i class="icon-book"></i> Library</a></li>
+                        <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
+                        <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <ul class="nav nav-list">
+                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                        <li><a href="#"><i class="icon-book"></i> Library</a></li>
+                        <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
+                        <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
+                    </ul>
+                </div>
+               <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <ul class="nav nav-list">
+                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                        <li><a href="#"><i class="icon-book"></i> Library</a></li>
+                        <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
+                        <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="copy-right-note text-center">
+                <p>© DomainHunt.com 2012-2018 Made with <i style="color:red;" class="icon-heart "></i> using
+                    WordPress.</p>
+            </div>
+        </div>
     </div>
 </footer>
 </body>
