--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
     <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}" type="text/css"/>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -64,36 +64,35 @@
         <div class="row ">
             <div class="col-lg-10 col-lg-offset-1">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <p class="footer-menu-title">Contact Us</p>
                     <ul class="footer-menu-list">
-                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                        <li><a href="#"><i class="icon-home"></i> Home</a></li>
                         <li><a href="#"><i class="icon-book"></i> Library</a></li>
                         <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
                         <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-                    <ul class="nav nav-list">
-                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                    <p class="footer-menu-title">Contact Us</p>
+                    <ul class="footer-menu-list">
+                        <li><a href="#"><i class="icon-home"></i> Home</a></li>
                         <li><a href="#"><i class="icon-book"></i> Library</a></li>
                         <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
                         <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-                    <ul class="nav nav-list">
-                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+                    <p class="footer-menu-title">Contact Us</p>
+                    <ul class="footer-menu-list">
+                        <li><a href="#"><i class="icon-home"></i> Home</a></li>
                         <li><a href="#"><i class="icon-book"></i> Library</a></li>
                         <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
                         <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
                     </ul>
                 </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-                    <ul class="nav nav-list">
-                        <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
-                        <li><a href="#"><i class="icon-book"></i> Library</a></li>
-                        <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
-                        <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
-                    </ul>
+                   <p class="footer-menu-title">Contact Us</p>
+                   <p>support-team@mythemeshop.com</p>
                 </div>
             </div>
         </div>
