--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,9 @@
 .footer{
-    background-color: #bdc3c7;
+    background-color: #10ac84;
     width: 100%;
     min-height: 100px;
     bottom:0px;
+    margin-top: 20px;
 }
 
 .err-image{
@@ -23,7 +24,7 @@
 	min-height:75px;
 	margin-bottom:20px;
 	border:none;
-    box-shadow: 4px 4px 5px #888888;
+    box-shadow: 3px 3px 5px #888888;
 
 }
 
@@ -41,9 +42,58 @@
   padding: 9px 10px !important;
 }
 
+.search-tip {
+    padding-top: 10px;
+}
+
+.search-list li {
+    display:inline;
+    list-style-type: none;
+    padding-right: 15px;
+    font-size: 1.4em;
+}
+
+.copy-right-note {
+    border-top: 1px solid #c8d6e5;
+    padding: 20px;
+    margin-top: 10px;
+    color: #353b48;
+}
+
+.footer-menu-title {
+    font-size:1.5em;
+    line-height: 24px;
+    font-weight: 600;
+    margin-top: 20px;
+    color: #fff;
+}
+
+.footer-menu-list{
+    font-size: 1.2em;
+    line-height: 20px;
+    padding:5px;
+}
+
+.footer-menu-list li {
+    list-style-type: none;
+    padding: 10px 0;
+}
+
+.footer-menu-list li a:hover {
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer-menu-list a:link, a:visited,a:active {
+    text-decoration: none;
+    color: #fff;
+}
+
+
 @media (min-width:768px) {
-	.navbar {
-	border-radius:0;
+    .navbar {
+        border-radius: 0;
+    }
 }
 
 @media (min-width: 768px) {
@@ -56,39 +106,4 @@
       font-weight: 600;
       font-family: Arial, Helvetica, sans-serif;
   }
-}
-
-.copy-right-note {
-    border-top: 1px solid #888888;
-    padding: 20px;
-    margin-top: 10px;
-}
-
-.footer-menu-title {
-    font-size:1.5em;
-    line-height: 24px;
-    font-weight: 600;
-    margin-top: 20px;
-    color: indianred;
-    padding-left: 40px;
-}
-
-.footer-menu-list{
-    font-size: 1.2em;
-    line-height: 20px;
-}
-
-.footer-menu-list li {
-    list-style-type: none;
-    padding:10px 0;
-}
-
-.footer-menu-list li a:hover {
-    text-decoration: none;
-    color: #fff;
-}
-
-.footer-menu-list a:active, a:link, a:visited {
-    text-decoration: none;
-    color: indianred;
 }
