--- a/templates/base.html
+++ b/templates/base.html
@@ -27,19 +27,7 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#example').DataTable({
-               "dom": 'tp'
-            });
-
-            var table = $('#example').DataTable();
-
-            $('#search-domain').keyup(function () {
-                table.search($(this).val()).draw();
-            })
-        });
-    </script>
+    <script src="{{ url_for('static',filename='js/tld.js') }}"></script>
      {% block head %}{% endblock %}
 </head>
 <body>
